feat: 취향 없을 경우 대표옷 반환